--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 certifi==2021.10.8
 charset-normalizer==2.0.8
+decouple==0.0.7
 Django==3.2.9
 djangorestframework==3.12.4
 idna==3.3
